styles/main.css
body {
    margin: 0;
}

.navbar ul{
    list-style-type:none;
    background-color: #16181d;
    padding: 0;
    margin: 0;
    overflow: hidden;
}

.navbar a {
    color: white;
    text-decoration: none;
    padding: 15px;
    display: block;
    text-align: center;
}

.navbar li {
    float:left
}



.li {
    list-style: none;
    padding: 0px 0px 9.6px ;
    font-height:1.3;
    font-weight:400;
    font-size: 12px;
    font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif
}


.h2 
{
        font-size: 56px;
        line-height: 1.07143;
        font-weight: 600;
        letter-spacing: -.005em;
        font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
}

.p {
    font-size: 28px;
    line-height: 1.14286;
    font-weight: 400;
    letter-spacing: .007em;
    font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
    margin-top: 6px;
}

.render-image{
    image-rendering: high-quality;
}

@keyframes scroll {
    to {
        transform: translate(calc(-50% - 0.5rem));
    }
}
.scroller__inner {
    animation: scroll var(--_animation-duration) var(--_animation-play-state, running) var(--_animation-direction, forwards) linear infinite;
}
.scroller {
    --_animation-direction: forwards;
    --_animation-duration: 60s;
}

